regression/fail/structure-and.sml
structure S = struct end
and S' = S
